@@ -662,3 +662,5 @@ FIXED: If the place of a special event was changed, show it at its new place on 
 	This works only with events whose place can be customized.
 DONE: Show guards' HP and skills on the maps.
 FIXED: Don't complain about data files missing from the mod folder.
+DONE: Added support for teleports. See USE_TELEPORTS in config.h.
+	Each balcony (whose left half has a non-zero modifier) will behave as a teleport to another balcony with the same modifier.
